<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_my_medical_data"
            android:icon="@drawable/ic_outline_assessment_24"
            android:title="@string/my_medical_data" />
        <item
            android:id="@+id/nav_medical_training"
            android:icon="@drawable/ic_outline_highlight_24"
            android:title="@string/medical_training" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_outline_chat_24"
            android:title="@string/chat_with_your_doctor" />
    </group>

    <item android:title="Social">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_outline_chat_24"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_homepage"
                android:icon="@drawable/ic_outline_chat_24"
                android:title="@string/visit_homepage" />
        </menu>
    </item>
</menu>