<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.cicero_interactive.practiceofprogrammingexamapp.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_medical_data"
        android:name="de.cicero_interactive.practiceofprogrammingexamapp.ui.gallery.GalleryFragment"
        android:label="@string/my_medical_data"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_medical_training"
        android:name="de.cicero_interactive.practiceofprogrammingexamapp.ui.slideshow.SlideshowFragment"
        android:label="@string/medical_training"
        tools:layout="@layout/fragment_medical_training" />
</navigation>