<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/medical_data_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:contentPadding="4dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/food_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/food_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_baseline_fastfood_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/data_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/food"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="26sp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="0"
                                app:cardBackgroundColor="@color/colorBackground"
                                app:cardCornerRadius="20dp">

                                <TextView
                                    android:id="@+id/data_date"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="0"
                                    android:gravity="center"
                                    android:text="@string/add"
                                    android:textSize="16sp" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/food_calories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="12/2000 kcal"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/sleep_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/sleep_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_baseline_nights_stay_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/sleep_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sleep"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="26sp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="0"
                                app:cardBackgroundColor="@color/colorBackground"
                                app:cardCornerRadius="20dp">

                                <TextView
                                    android:id="@+id/sleep_add"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="0"
                                    android:gravity="center"
                                    android:text="@string/add"
                                    android:textSize="16sp" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/sleep_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="7 h 20 min"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weight_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/weight_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_outline_speed_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/weight_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/weight"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="26sp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="0"
                                app:cardBackgroundColor="@color/colorBackground"
                                app:cardCornerRadius="20dp">

                                <TextView
                                    android:id="@+id/weight_add"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="0"
                                    android:gravity="center"
                                    android:text="@string/update"
                                    android:textSize="16sp" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/weight_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="80kg"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/allergies_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:contentPadding="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/allergies_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0"
                        app:srcCompat="@drawable/ic_outline_warning_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/allergies_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/allergies"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="26sp" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginTop="2dp"
                                android:layout_marginRight="2dp"
                                android:layout_marginBottom="2dp"
                                android:layout_weight="0"
                                app:cardBackgroundColor="@color/colorBackground"
                                app:cardCornerRadius="20dp">

                                <TextView
                                    android:id="@+id/allergies_add"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginBottom="5dp"
                                    android:layout_weight="0"
                                    android:gravity="center"
                                    android:text="@string/add"
                                    android:textSize="16sp" />

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/allergies_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:text="Grass and tree pollen, dust mites"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>